<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>practise</groupId>
  <artifactId>appium-template</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>appium-template</name>
  <url>http://maven.apache.org</url>


  <properties>
    <aspectj.version>1.8.10</aspectj.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <property name="target.dir" value="${base.dir}/target"/>
    <suiteFile/>
    <envConfig/>
  </properties>

  <repositories>
    <repository>
      <id>diconium-test-automation-framework-utils-release</id>
      <name>diconium test automation framework utils</name>
      <url>https://nexus.diconium.com/content/repositories/diconium-test-automation-framework-utils-release/</url>
    </repository>
    <repository>
      <id>diconium-test-automation-framework-utils-snapshot</id>
      <name>diconium test automation framework utils - Snapshots</name>
      <url>https://nexus.diconium.com/content/repositories/diconium-test-automation-framework-utils-snapshot/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>8</source>
          <target>8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>
          <systemPropertyVariables>
            <environment>${envConfig}</environment>
          </systemPropertyVariables>
          <testFailureIgnore>true</testFailureIgnore>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/java/testsuites/${suiteFile}</suiteXmlFile>
          </suiteXmlFiles>
          <argLine>
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
 
  <dependencies>

    <dependency>
      <groupId>com.diconium.qautils</groupId>
      <artifactId>diconium-test-automation-framework-utils</artifactId>
      <version>1.2.0</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.6</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>3.1.6</version>
<!--      <scope>test</scope>-->
    </dependency>

    <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
    <dependency>
      <groupId>io.appium</groupId>
      <artifactId>java-client</artifactId>
      <version>7.3.0</version>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>pro.truongsinh</groupId>-->
<!--      <artifactId>appium-flutter-finder</artifactId>-->
<!--      <version>0.0.4</version>-->
<!--    </dependency>-->

  </dependencies>
  <!-- https://mvnrepository.com/artifact/io.appium/java-client -->

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>ru.yandex.qatools.allure</groupId>
        <artifactId>allure-maven-plugin</artifactId>
        <version>2.6</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.3</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <configLocation>src/main/resources/checkstyle_config.xml</configLocation>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>checkstyle</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  
</project>
